org_unpackaged/standard/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ACTEngagements__c</fullName>
        <description>Displays the number of active engagements for the associate or client; used in the connection center</description>
        <inlineHelpText>The number of active engagements for this associate or client</inlineHelpText>
        <label>Active Engagements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AMFirstName__c</fullName>
        <description>Formula to pull the first name of the account manager; used in the connection center</description>
        <formula>Account_Manager__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>First name of the referenced AM</inlineHelpText>
        <label>AM First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMFullName__c</fullName>
        <description>Formula to pull the full name of the AM; used in the connection center</description>
        <formula>Account_Manager__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Full name of the AM</inlineHelpText>
        <label>AM Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMLastName__c</fullName>
        <description>Formula used to pull the last name of the AM; used in the connection center</description>
        <formula>Account_Manager__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Last name of the referenced AM</inlineHelpText>
        <label>AM Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMTimeTrade__c</fullName>
        <description>Formula used to pull the TimeTrade link for the AM; used in the connection center</description>
        <formula>Account_Manager__r.TimeTrade_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The TimeTrade link for the referenced AM</inlineHelpText>
        <label>AM TimeTrade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Email__c</fullName>
        <description>Formula used to pull the AM&apos;s email address; used by the connection center</description>
        <formula>Account_Manager__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Email address for the referenced AM</inlineHelpText>
        <label>AM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountExecutive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference field to identify who is the AE for the client - data inserted into MBO</description>
        <inlineHelpText>Use they look up button to search and select the OAM for this account</inlineHelpText>
        <label>Operational Account Manager</label>
        <referenceTo>My_Biz_Office_User__c</referenceTo>
        <relationshipLabel>Clients (OAM)</relationshipLabel>
        <relationshipName>ClientOAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>My_Biz_Office_User__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Status__c</fullName>
        <description>Flags where the account is in the sales process</description>
        <label>Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>Converted Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Identified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy B2C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attempted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AssociateNewsletter__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Subscription option for Associates</description>
        <inlineHelpText>Check box to opt in to Associate Newsletter</inlineHelpText>
        <label>Associate Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COMEngagements__c</fullName>
        <description>Displays the number of completed engagements for the client or associate; used in the connection center</description>
        <inlineHelpText>The number of completed engagements for this associate or client</inlineHelpText>
        <label>Completed Engagements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CURAssociates__c</fullName>
        <description>Displays the current number of associates this client is working with; used in the Connection Center</description>
        <inlineHelpText>The number of unique associates currently engaged by this client</inlineHelpText>
        <label>Associates Currently Engaged</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClientList__c</fullName>
        <description>Text box displays a string of company numbers for work orders; used in the the connection center</description>
        <inlineHelpText>The company numbers for the companies this associate has worked with</inlineHelpText>
        <label>Client List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Number__c</fullName>
        <description>The company number in the MBO CMS</description>
        <externalId>true</externalId>
        <inlineHelpText>Hidden</inlineHelpText>
        <label>Company Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_size__c</fullName>
        <description>Flags the size of the company</description>
        <inlineHelpText>Select the estimated size of the company</inlineHelpText>
        <label>Company size</label>
        <picklist>
            <picklistValues>
                <fullName>Government agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large organization (Fortune 1000 or equivalent)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Organization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Worthiness__c</fullName>
        <description>Decides the credit status</description>
        <inlineHelpText>Select the status of the credit check</inlineHelpText>
        <label>Credit Worthiness</label>
        <picklist>
            <picklistValues>
                <fullName>Unchecked</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unacceptable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DailySalesOutstandingCode__c</fullName>
        <description>This field is updated by Business Center and determines what is displayed in Access. Garrett Zaino 4/9/2012</description>
        <inlineHelpText>1 = New Client - hasn&apos;t had 90 days to pay first invoice;
2 = Inactive Client - no billing within 90 days, nor outstanding balance;
3 = Unpaid Inactive Client - no billing within 90 days, with remaining balance;
0 = Good standing - all else</inlineHelpText>
        <label>Daily Sales Outstanding Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DailySalesOutstanding__c</fullName>
        <description>Updated by Business Center, pushed to Access</description>
        <inlineHelpText>The average number of days it takes for a client to send payment:
[(outstanding balance) / (past 90 days of activity)] * 90</inlineHelpText>
        <label>Daily Sales Outstanding</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_credit_check__c</fullName>
        <description>Historical date</description>
        <inlineHelpText>The date the credit check occurred</inlineHelpText>
        <label>Date of credit check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is updated from the Business Center. Garrett Zaino 4/16/2012</description>
        <label>Direct?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enterprise_Suppression__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enterprise Suppression</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstAllowedInvoiceDate__c</fullName>
        <description>Date field used to display the date of the first allowed invoice - used to insert data to MBO</description>
        <inlineHelpText>Please select the first date we are allowed to invoice the client</inlineHelpText>
        <label>First Allowed Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fit_for_auto_merge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fit for auto-merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <description>Admin field</description>
        <inlineHelpText>Code explaining where the record came from (Hidden)</inlineHelpText>
        <label>Import Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The first active work order of the record</description>
        <label>Initial Work Order</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company/Account</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastBillingDate__c</fullName>
        <description>Updated by Business Center; used to determine if the account gets a client space in Access.</description>
        <inlineHelpText>The date an account last received an invoice that was not voided.</inlineHelpText>
        <label>Last Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadCEM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up field used to identify the Lead CEM for a client - used on insert to MBO</description>
        <inlineHelpText>Please select the Lead CEM for the client</inlineHelpText>
        <label>Lead CEM</label>
        <referenceTo>My_Biz_Office_User__c</referenceTo>
        <relationshipLabel>Clients (Lead CEM)</relationshipLabel>
        <relationshipName>ClientLeadCEM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MBOAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used as a flag for adding a record to the connection center; used in the connection center</description>
        <inlineHelpText>Check this if this record is to send an update to the connection center</inlineHelpText>
        <label>MBO Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MBODivision__c</fullName>
        <description>Picklist used to identify which region of MBO enterprise this client is - Inserted into MBO</description>
        <inlineHelpText>Please select which regional division of MBO Enterprise is responsible for this Client</inlineHelpText>
        <label>MBO Region</label>
        <picklist>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MSA__c</fullName>
        <description>This field displays the url that hosts the MSA for the client; used in the connection center</description>
        <inlineHelpText>The URL that hosts the MSA for the client</inlineHelpText>
        <label>MSA</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MSP__c</fullName>
        <description>Displays the MSP for the client; used in the connection center</description>
        <inlineHelpText>The MSP for this client</inlineHelpText>
        <label>MSP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Service_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flags if a MSA is in place</description>
        <inlineHelpText>Check if we have a MSA in place</inlineHelpText>
        <label>Master Service Agreement?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MemberSince__c</fullName>
        <description>Displays the date of MBO Membership; used for the connection center sync</description>
        <inlineHelpText>When the Associate or Client first joined MBO</inlineHelpText>
        <label>MBO Associate Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Negative_reason__c</fullName>
        <description>Allows user to enter a reason for the account being negative</description>
        <inlineHelpText>Enter the reason for the account&apos;s negative status</inlineHelpText>
        <label>Negative reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NewBMLast__c</fullName>
        <label>New BM Last</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperationPlan__c</fullName>
        <description>Updated by the Business Center. Garrett Zaino 4/16/2012</description>
        <label>Operation Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard - Foreign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Account Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Debit Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsored Staff - Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll - Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsored Staff - Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll - Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard - Sponsored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Billing Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker Fee Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Staff</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Owner_Email__c</fullName>
        <description>The email of the owner of the record.</description>
        <formula>Owner.Email</formula>
        <label>Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_First_Name__c</fullName>
        <description>The first name of the owner of the record.</description>
        <formula>Owner.FirstName</formula>
        <label>Owner First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Landing_Page__c</fullName>
        <description>The landing page URL of the owner of the record.</description>
        <formula>Owner.Landing_Page__c</formula>
        <label>Owner Landing Page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Last_Name__c</fullName>
        <description>The last name of the owner of the record.</description>
        <formula>Owner.LastName</formula>
        <label>Owner Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_LinkedIn__c</fullName>
        <description>The LinkedIn URL of the owner of the record.</description>
        <formula>Owner.LinkedIn_URL__c</formula>
        <label>Owner LinkedIn</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Phone__c</fullName>
        <description>The desk phone number of the owner of the record.</description>
        <formula>Owner.Phone</formula>
        <label>Owner Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Time_Trade__c</fullName>
        <description>The time trade URL of the owner of the record.</description>
        <formula>Owner.fs_tTLink__c</formula>
        <label>Owner Time Trade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Title__c</fullName>
        <description>The title of the owner of the record.</description>
        <formula>Owner.Title</formula>
        <label>Owner Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentTerms__c</fullName>
        <description>Picklist used to display the Payment terms for the clients - used for insert into MBO</description>
        <inlineHelpText>Please select the payment terms for the client</inlineHelpText>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Due Upon Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>When Client Pays (est 30 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>When Client Pays (est 45 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>When Client Pays (est 60 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charge Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverse Wire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>When Client Pays (est 20 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>When Client Pays (est 40 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 55</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>This field is updated by the Business Center. Garrett Zaino 4/16/2012</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>DC Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYC Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foreign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Serve</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Level__c</fullName>
        <description>Indicates the level of risk if we take on the account</description>
        <inlineHelpText>Select how risky the associates working for the client are.</inlineHelpText>
        <label>Risk Level</label>
        <picklist>
            <controllingField>Master_Service_Agreement__c</controllingField>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SoI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Subscription option for the State of Independence</description>
        <inlineHelpText>Check to opt into the State of Independence campaign</inlineHelpText>
        <label>State of Independence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TOTAssociates__c</fullName>
        <description>Displays the total number of associates this client engaged with; used in the Connection Center</description>
        <inlineHelpText>The total number of unique MBO associates this client has engaged</inlineHelpText>
        <label>Total Associates Engaged</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOTBilling__c</fullName>
        <description>Displays the lifetime billings for this associate or client; used in the Connection Center</description>
        <inlineHelpText>The lifetime billings for this associate or client</inlineHelpText>
        <label>Billings to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TOTEngagements__c</fullName>
        <description>Displays the number of total engagements for the associate or client; used in the Connection Center</description>
        <inlineHelpText>The total number of engagements through MBO Partners</inlineHelpText>
        <label>Total MBO Engagements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TeamLeader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box used to identify if the Associate is a Team Lead or not - updated by MBO</description>
        <inlineHelpText>Please check if the Associate is a team lead</inlineHelpText>
        <label>Team Leader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>Picklist used to identify the weight of the client</description>
        <inlineHelpText>Please select the Tier level for this Client</inlineHelpText>
        <label>Service Level</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Closed_Won_Opportunities__c</fullName>
        <description>Total Number of Closed Won Opportunities</description>
        <label>Total Closed Won Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <description>Displays the user name for the associate; used by the connection center</description>
        <inlineHelpText>The user name for the associate</inlineHelpText>
        <label>User Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VMS__c</fullName>
        <description>Displays the VMS for the client; used by the connection center</description>
        <inlineHelpText>The VMS for this client</inlineHelpText>
        <label>VMS</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fb_MBO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MBO Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fd_activityChangeDate__c</fullName>
        <label>Account Status Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaActivate__c</fullName>
        <label>Activate Associate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaAssistEnroll1__c</fullName>
        <label>Assist with Enrollment - Attempt 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaAssistEnroll2__c</fullName>
        <label>Assist with Enrollment - Attempt 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaAssistEnroll3__c</fullName>
        <label>Assist with Enrollment - Attempt 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaBackgroundCheck1__c</fullName>
        <label>Background/Drug Screening Begins</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaBackgroundCheck2__c</fullName>
        <label>Background/Drug Screening Launched</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaBackgroundCheck3__c</fullName>
        <label>Background/Drug Screening Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaEnrollPark__c</fullName>
        <label>Park And Escalate to Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaEnrollmentComplete__c</fullName>
        <label>Enrollment Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaI9__c</fullName>
        <label>I-9 Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaInitialCall1__c</fullName>
        <label>Conduct Initial Call - Attempt 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaInitialCall2__c</fullName>
        <label>Conduct Initial Call - Attempt 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaInitialCall3__c</fullName>
        <label>Conduct Initial Call - Attempt 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaInitialPark__c</fullName>
        <label>Park And Escalate to Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaInquiry__c</fullName>
        <label>Inquiry Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaOnboardingSubmit__c</fullName>
        <label>On-boarding Documents Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaPending__c</fullName>
        <label>Associate Begins Enrollment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaQualDocs__c</fullName>
        <label>Qualification Docs Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaQualQuestionComp__c</fullName>
        <label>Enrollment Questionnaire Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaQualSurvey__c</fullName>
        <label>Qualification Survey Assessed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaQualUpload__c</fullName>
        <label>Upload Supporting Documentation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fd_slaWOSubmit__c</fullName>
        <label>Client Sends Work Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fn_activityStatusAge__c</fullName>
        <formula>IF(
   NOT(ISBLANK(fd_activityChangeDate__c)),
   TODAY() - fd_activityChangeDate__c,
   TODAY() - DATEVALUE(CreatedDate)
)</formula>
        <label>Account Status Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fn_totalInactiveOpportunities__c</fullName>
        <label>Total Inactive Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fn_totalOpenOpportunities__c</fullName>
        <label>Total Open Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Identifying, Working</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fn_totalOpportunities__c</fullName>
        <label>Total Opportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>fn_totalSoldOpportunities__c</fullName>
        <label>Total Sold Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Sold</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>